Bug #22272
S3 API: incorrect error code on GET website bucket
0%
Description
RGW returns "NoSuchKey" error code on GET website, when bucket doesn't have website configuration:
Request:GET /somebucket?website HTTP/1.1
Response:HTTP/1.1 404 Not Found
...
<Error>
<Code>NoSuchKey</Code>
<BucketName>somebucket</BucketName>
...
</Error>
It should return "NoSuchWebsiteConfiguration", like in AWS S3:
Request:GET /somebucket?website HTTP/1.1
Response:HTTP/1.1 404 Not Found
...
<Error>
<Code>NoSuchWebsiteConfiguration</Code>
<BucketName>somebucket</BucketName>
...
</Error>
Related issues
History
#1 Updated by Dmitry Plyakin about 5 years ago
#2 Updated by Casey Bodley about 5 years ago
- Status changed from New to 7
- Backport set to jewel luminous
#3 Updated by Nathan Cutler about 5 years ago
- Status changed from 7 to Pending Backport
#4 Updated by Nathan Cutler about 5 years ago
- Copied to Backport #22432: luminous: S3 API: incorrect error code on GET website bucket added
#5 Updated by Nathan Cutler about 5 years ago
- Copied to Backport #22433: jewel: S3 API: incorrect error code on GET website bucket added
#6 Updated by Dmitry Plyakin about 5 years ago
I created two issues already...
http://tracker.ceph.com/issues/22425
http://tracker.ceph.com/issues/22426
What should i do with them?
#7 Updated by Nathan Cutler about 5 years ago
- Copied to deleted (Backport #22433: jewel: S3 API: incorrect error code on GET website bucket)
#8 Updated by Nathan Cutler about 5 years ago
- Copied to Backport #22425: jewel: S3 API: incorrect error code on GET website bucket added
#9 Updated by Nathan Cutler about 5 years ago
- Copied to deleted (Backport #22432: luminous: S3 API: incorrect error code on GET website bucket)
#10 Updated by Nathan Cutler about 5 years ago
- Copied to Backport #22426: luminous: S3 API: incorrect error code on GET website bucket added
#11 Updated by Nathan Cutler about 5 years ago
Dmitry Plyakin wrote:
I created two issues already...
http://tracker.ceph.com/issues/22425
http://tracker.ceph.com/issues/22426
What should i do with them?
Sorry for the confusion - the issues you created were not linked to this one via "Copied to" in the "Related issues" section, so the automated scripting didn't know about them and created new issues.
Cleaned it up manually.
#12 Updated by Dmitry Plyakin about 5 years ago
Nathan Cutler wrote:
Sorry for the confusion - the issues you created were not linked to this one via "Copied to" in the "Related issues" section, so the automated scripting didn't know about them and created new issues.
Cleaned it up manually.
That's ok! And what should i do next time? Wait for script? I can't link issues by myself...
#13 Updated by Nathan Cutler about 5 years ago
That's ok! And what should i do next time? Wait for script? I can't link issues by myself...
The links get created automatically if you use the "Copy" function.
For example, at the bottom of http://tracker.ceph.com/issues/22446 I have the following options:
Edit Log time Watch Copy Delete
You probably don't see all of those, but if "Copy" is there you can use it to create a new issue and the copy links will get created.
That said, however, in practice I would either (a) wait for the script, or (b) go ahead and open the backport PR and ping me (@smithfarm) in it, saying something like "Hey, this is a backport of such-and-such which doesn't have backport issue created yet".
#14 Updated by Dmitry Plyakin about 5 years ago
I don't have "Copy" button. :(
OK, next time I'll do as you say.
#15 Updated by Nathan Cutler almost 5 years ago
- Status changed from Pending Backport to Resolved