rgw: fix GET website response error code

Change NoSuchKey error code to NoSuchWebsiteConfiguration, when bucket doesn't have website configuration.

Fixes: http://tracker.ceph.com/issues/22272
Signed-off-by: Dmitry Plyakin <dplyakin@gmail.com>
(cherry picked from commit 56344f0e147e1781bb359bfde6878511b077487f)